istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice
  namespace: moganthkumar
spec:
  hosts:
    - "*"
  gateways:
    - moganthkumar/gateway
  http:
    - match:
        - uri:
            prefix: /
        - uri:
            prefix: /api
      route:
        - destination:
            host: iot-app-service.moganthkumar.svc.cluster.local
            port:
              number: 80
